--- a/public/course-details.html
+++ b/public/course-details.html
@@ -107,7 +107,7 @@
                     <h1 class="text-white">
                         Course Details
                     </h1>
-                    <p class="mx-auto text-white  mt-20 mb-40">
+                    <p class="mx-auto text-white  mt-20 mb-40" id="course-intro">
                         In the history of modern astronomy, there is probably no one greater leap forward than the
                         building.
                     </p>
@@ -135,8 +135,8 @@
                         <img class="img-fluid" src="img/courses/course-details.jpg" alt="">
                     </div>
                     <div class="content-wrapper">
-                        <h4 class="title">Objectives</h4>
-                        <div class="content">
+                        <h4 class="title">Description</h4>
+                        <div class="content" id="course-description">
                             When you enter into any new area of science, you almost always find yourself with a
                             baffling new language of
                             technical terms to learn before you can converse with the experts. This is certainly
@@ -159,7 +159,7 @@
                             irure dolor in reprehenderit in voluptate velit esse cillum.
                         </div>
 
-                        <h4 class="title">Eligibility</h4>
+                        <!-- <h4 class="title">Eligibility</h4>
                         <div class="content">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore
@@ -179,16 +179,16 @@
                             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
                             commodo consequat. Duis aute
                             irure dolor in reprehenderit in voluptate velit esse cillum.
-                        </div>
+                        </div> -->
 
                         <h4 class="title">Course Outline</h4>
                         <div class="content">
                             <ul class="course-list">
-                                <li class="justify-content-between d-flex">
+                                <!-- <li class="justify-content-between d-flex">
                                     <p>Introduction Lesson</p>
                                     <a class="btn text-uppercase" href="#">View Details</a>
-                                </li>
-                                <li class="justify-content-between d-flex">
+                                </li> -->
+                                <!-- <li class="justify-content-between d-flex">
                                     <p>Basics of HTML</p>
                                     <a class="btn text-uppercase" href="#">View Details</a>
                                 </li>
@@ -219,7 +219,7 @@
                                 <li class="justify-content-between d-flex">
                                     <p>Canvas in HTML 5</p>
                                     <a class="btn text-uppercase" href="#">View Details</a>
-                                </li>
+                                </li> -->
 
                             </ul>
                         </div>
@@ -232,13 +232,13 @@
                         <li>
                             <a class="justify-content-between d-flex" href="#">
                                 <p>Trainer’s Name</p>
-                                <span class="or">George Mathews</span>
+                                <span class="or">New Talent Home -Teacher</span>
                             </a>
                         </li>
                         <li>
                             <a class="justify-content-between d-flex" href="#">
                                 <p>Course Fee </p>
-                                <span>$230</span>
+                                <span></span>
                             </a>
                         </li>
                         <li>
@@ -303,7 +303,7 @@
                                 <a href="#" class="btn text-center text-uppercase enroll">Submit</a>
                             </div>
                         </div>
-                        <div class="comments-area mb-30">
+                        <div class="comments-area mb-30" style="display: none">
                             <div class="comment-list">
                                 <div class="single-comment single-reviews justify-content-between d-flex">
                                     <div class="user justify-content-between d-flex">
