upcoming course and events added

--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
          
          <span class="lnr-info"> <span class="alert-notify">Upcoming Workshop :</span> &nbsp;Advanced Excel Workshop on
            April 24, 15:00 GMT. <a
-             href="#"><span class="alert-notify"> &nbsp;Learn More >> </span></a></span>
+             href="/upcoming_courses.html"><span class="alert-notify"> &nbsp;Learn More >> </span></a></span>
          <span class="lnr lnr-cross" id="close-search" title="Close Search"></span>
        </form>
      </div>
