added cart bag features

--- a/public/course-details.html
+++ b/public/course-details.html
@@ -238,7 +238,7 @@
                         <li>
                             <a class="justify-content-between d-flex" href="#">
                                 <p>Course Fee </p>
-                                <span></span>
+                                <span id="course-fee"></span>
                             </a>
                         </li>
                         <li>
@@ -254,7 +254,7 @@
                             </a>
                         </li>
                     </ul>
-                    <a href="#" class="btn text-uppercase enroll">Enroll the course</a>
+                    <a href="#" class="btn text-uppercase enroll enroll-course">Enroll the course</a>
 
                     <h4 class="title">Reviews</h4>
                     <div class="content">
