payment version done

--- a/public/about.html
+++ b/public/about.html
@@ -79,11 +79,11 @@
             <li><a href="https://study.newtalenthome.com/login/index.php">Sign In</a></li>
 
 
-            <!-- <li>
-              <button class="search">
-                <span class="lnr lnr-magnifier" id="search"></span>
+       <li>
+              <button class="cart avd-share" >
+                <span class="lnr lnr-cart" id="shop-cart"></span>
               </button>
-            </li> -->
+            </li>
           </ul>
         </div>
          <form class="search-container">
@@ -448,7 +448,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="js/jquery.counterup.min.js"></script>
   <script src="js/waypoints.min.js"></script>
   <script src="js/jquery.nice-select.min.js"></script>
-  <script src="js/main.js"></script>
+   <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 </body>
 
 </html>
