--- a/public/course-details.html
+++ b/public/course-details.html
@@ -71,6 +71,12 @@
                              </div>
                          </li>
                         <li><a href="courses.html">Corporate E-learning</a></li>
+                        <li>
+                            <button class="cart avd-share">
+                                <span class="lnr lnr-cart" id="shop-cart"></span>
+                            </button>
+                        </li>
+                         <li><a href="#">|</a></li>
 
                         <!-- Dropdown -->
                         <!-- <li><a href="contacts.html">Contacts</a></li> -->
@@ -78,11 +84,7 @@
                         <li><a href="https://study.newtalenthome.com/login/index.php">Sign In</a></li>
 
 
-                        <!-- <li>
-              <button class="search">
-                <span class="lnr lnr-magnifier" id="search"></span>
-              </button>
-            </li> -->
+  
                     </ul>
                 </div>
             </div>
@@ -255,7 +257,6 @@
                         </li>
                     </ul>
                     <a href="#" class="btn text-uppercase enroll enroll-course">Enroll the course</a>
-
                     <h4 class="title">Reviews</h4>
                     <div class="content">
                         <div class="review-top row pt-40">
@@ -526,7 +527,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/main.js"></script>
+     <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 </body>
 
 </html>
