--- a/public/elements.html
+++ b/public/elements.html
@@ -934,7 +934,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 	<script src="js/jquery.counterup.min.js"></script>
 	<script src="js/waypoints.min.js"></script>
 	<script src="js/jquery.nice-select.min.js"></script>
-	<script src="js/main.js"></script>
+	 <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 </body>
 
 </html>
