--- a/public/all_courses.html
+++ b/public/all_courses.html
@@ -77,11 +77,11 @@
            <li><a href="https://study.newtalenthome.com/login/index.php">Sign In</a></li>
 
 
-           <!-- <li>
-              <button class="search">
-                <span class="lnr lnr-magnifier" id="search"></span>
+      <li>
+              <button class="cart avd-share" >
+                <span class="lnr lnr-cart" id="shop-cart"></span>
               </button>
-            </li> -->
+            </li>
          </ul>
         </div>
         <form class="search-container">
@@ -581,7 +581,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
   <script src="js/jquery.counterup.min.js"></script>
   <script src="js/waypoints.min.js"></script>
   <script src="js/jquery.nice-select.min.js"></script>
-  <script src="js/main.js"></script>
+   <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 </body>
 
 </html>
