--- a/public/eclipse education-doc/index.html
+++ b/public/eclipse education-doc/index.html
@@ -180,7 +180,9 @@
 						<script src="js/jquery.counterup.min.js"></script>
 						<script src="js/waypoints.min.js"></script>
 						<script src="js/jquery.nice-select.min.js"></script>
-						<script src="js/main.js"></script>
+						 <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 		            </pre>
 		        </section>
 		        
