--- a/public/terms_of_use.html
+++ b/public/terms_of_use.html
@@ -81,11 +81,11 @@
                         <li><a href="https://study.newtalenthome.com/login/index.php">Sign In</a></li>
 
 
-                        <!-- <li>
-              <button class="search">
-                <span class="lnr lnr-magnifier" id="search"></span>
+                   <li>
+              <button class="cart avd-share" >
+                <span class="lnr lnr-cart" id="shop-cart"></span>
               </button>
-            </li> -->
+            </li>
                     </ul>
                 </div>
             </div>
@@ -620,7 +620,9 @@
     <script src="js/jquery.counterup.min.js"></script>
     <script src="js/waypoints.min.js"></script>
     <script src="js/jquery.nice-select.min.js"></script>
-    <script src="js/main.js"></script>
+     <script src="js/main.js"></script>
+  <script src="js/notify.js"></script>
+  <script src="js/hai.js"></script>
 </body>
 
 </html>
